Just another update

--- a/Python podstawowy/10. Praca z plikami.md
+++ b/Python podstawowy/10. Praca z plikami.md
@@ -38,7 +38,7 @@ with open("files/lorem_ipsum.txt", "w") as file:
     file.write(my_text_long)
 ```
 
-Użyliśmy w tym celu ścieżek, pod którymi mają znaleźć się nowe pliki. Pliki te otwieramy w trybie "w" co oznacza zapis (*write*). Tryb "w" najpierw usuwa całą zawartość pliku tekstowego (jeśli ten istnieje) a następnie zapisuje do niego odpowiednie dane. Aby dopisać nowy tekst do aktualnej zawartości pliku, nalezy otworzyć go w trybie "a" (*append*).
+Użyliśmy w tym celu ścieżek, pod którymi mają znaleźć się nowe pliki. Pliki te otwieramy w trybie "w" co oznacza zapis (*write*). Tryb "w" najpierw usuwa całą zawartość pliku tekstowego (jeśli ten istnieje) a następnie zapisuje do niego odpowiednie dane. Aby dopisać nowy tekst do aktualnej zawartości pliku, należy otworzyć go w trybie "a" (*append*).
 
 ```python
 with open("files/hello_world.txt", "a") as file:
@@ -46,7 +46,7 @@ with open("files/hello_world.txt", "a") as file:
 ```
 
 ---
-Jeśli chcemy zapisać do pliku kolejne elementy listy jeden po dugim możemy zrobić to za pomocą funkcji `writelines()`:
+Jeśli chcemy zapisać do pliku kolejne elementy listy jeden po drugim, możemy zrobić to za pomocą funkcji `writelines()`:
 
 ```python
 list_to_write = ["test\n"] * 10
@@ -58,7 +58,7 @@ with open("files/test_writelines.txt", "w") as file:
 
 #### 10.1.2 Operacje odczytu
 
-Aby wczytać zawartość pliku nalezy otworzyć go w trybie odczytu "r" (*read*) a następnie użyć funkcji `read()`:
+Aby wczytać zawartość pliku należy otworzyć go w trybie odczytu "r" (*read*), a następnie użyć funkcji `read()`:
 
 ```python
 with open("files/hello_world.txt", "r") as file:
@@ -96,8 +96,8 @@ Oprócz powyżej opisanych trybów otwierania pliku występują również inne. 
 | wb | Write bytes - zapisuje obiekt typu bytes do pliku|
 
 
-**Pliki txt - podsumowanie:**
-- Aby wczytać lub zapisać plik tekstowy nalezy otworzyć go za pomocą funkcji `open()`
+**Pliki txt — podsumowanie:**
+- Aby wczytać lub zapisać plik tekstowy należy otworzyć go za pomocą funkcji `open()`
 - Tryb odczytu oznaczamy jako "r", tryb zapisu jako "w" a tryb *append* jako "a"
 - Możemy zapisywać listy lub wczytywać pliki tekstowe do list za pomocą funkcji `writelines()` oraz `readlines()`
 - Aby odczytywać albo zapisywać zmienne typu *bytes* otwieramy plik w trybie "rb" lub "wb"
@@ -115,12 +115,12 @@ Oprócz powyżej opisanych trybów otwierania pliku występują również inne. 
 ---
 &nbsp;
 ### 10.3 Pliki json
-Pliki tekstowe nie są najlepszym sposobem na przechowywanie danych. Nie da się zapisać w nich danych o złożonej strukturze. Jest to wyłącznie ciąg tekstu, odpowiednik zmiennej typu string. Jeśli w danych jest jakaś hierarchiczna struktura - tak jak w listach czy słownikach - pliki tekstowe jej nie oddadzą. Dlatego właśnie zwykle lepszym wyborem jest zapis danych w plikach .json.
+Pliki tekstowe nie są najlepszym sposobem na przechowywanie danych. Nie da się zapisać w nich danych o złożonej strukturze. Jest to wyłącznie ciąg tekstu, odpowiednik zmiennej typu string. Jeśli w danych jest jakaś hierarchiczna struktura — tak jak w listach czy słownikach — pliki tekstowe jej nie oddadzą. Dlatego właśnie zwykle lepszym wyborem jest zapis danych w plikach .json.
 
-JSON to skrót od *JavaScript Object Notation* i oznacza format danych, który odpowiada zagnieżdżonej strukturze pythonowych list i słowników. Jeżeli posiadamy dane w takiej formie możemy je łatwo zapisać do plików z rozszerzeniem .json. Potrzebujemy jedynie zaimportować odpowiednią bibliotekę.
+JSON to skrót od *JavaScript Object Notation* i oznacza format danych, który odpowiada zagnieżdżonej strukturze pythonowych list i słowników. Jeżeli posiadamy dane w takiej formie, możemy je łatwo zapisać do plików z rozszerzeniem .json. Potrzebujemy jedynie zaimportować odpowiednią bibliotekę.
 
 #### 10.3.1 Operacje zapisu
-Aby zapisać listę albo słownik do pliku .json należy otworzyć go w trybie zapisu a następnie wywołać funkcję `dump` z biblioteki `json`:
+Aby zapisać listę albo słownik do pliku .json należy otworzyć go w trybie zapisu, a następnie wywołać funkcję `dump` z biblioteki `json`:
 
 ```python
 import json
@@ -149,7 +149,7 @@ zombie_characters_str = json.dumps(zombie_characters)
 
 
 #### 10.3.2 Odczyt z pliku
-Aby z powrotem wczytać obiekt z pliku .json należy użyć funkcji `load` z tej samej biblioteki `json`:
+Aby z powrotem wczytać obiekt z pliku .json, należy użyć funkcji `load` z tej samej biblioteki `json`:
 
 ```python
 with open("files/zombie_characters.json", "r") as f:
@@ -166,7 +166,7 @@ loaded_json = json.loads(zombie_characters_str)
 loaded_json
 ```
 
-**Pliki json - podsumowanie:**
+**Pliki json — podsumowanie:**
 - Aby zapisać strukturę list i słowników do pliku .json używamy funkcji `dump` z biblioteki `json`
 - Aby zamienić taką strukturę na stringa używamy funkcji `dumps`
 - Możemy również wczytać taki plik i stworzyć w ten sposób zmienną typu `list` czy `dict` za pomocą funkcji `load`
