--- a/Python podstawowy/4. Instrukcje warunkowe.md
+++ b/Python podstawowy/4. Instrukcje warunkowe.md
@@ -174,7 +174,7 @@ if not 0:   # not 0 --> not False --> True
 ---
 &nbsp;
 ### 4.4 Instrukcja if-else
-Jeśli chcemy aby jeden blok kodu wykonał się w przypadku spełnienia warunku logicznego a inny w *przeciwnym wypadku* używamy instrukcji *if-else*. Jej składnia jest rozwinięciem składni instrukcji *if*. Po pierwszym wciętym bloku kodu należy napisać słowo kluczowe *else* (oraz dwukropek) po czym w kolejnym wciętym bloku znajduje się zbiór instrukcji które mają się wykonać jeśli nie zostanie spełniony warunek logiczny.
+Jeśli chcemy, aby jeden blok kodu wykonał się w przypadku spełnienia warunku logicznego a inny w *przeciwnym wypadku* używamy instrukcji *if-else*. Jej składnia jest rozwinięciem składni instrukcji *if*. Po pierwszym wciętym bloku kodu należy napisać słowo kluczowe *else* (oraz dwukropek), po czym w kolejnym wciętym bloku znajduje się zbiór instrukcji, które mają się wykonać jeśli nie zostanie spełniony warunek logiczny.
 
 Poniżej kilka przykładów:
 ```python
@@ -243,11 +243,11 @@ print(winner)
 &nbsp;
 ### 4.5 Instrukcja if-elif-(else)
 Kolejnym rozwinięciem instrukcji `if` oraz `if-else` jest `if-elif-else`. Działa ona następująco:
-*if* - sprawdzany jest pierwszy warunek logiczny. Pod nim znajduje się wcięty blok kodu, który wykona się jeśli warunek zostanie spełniony.
+*if* — sprawdzany jest pierwszy warunek logiczny. Pod nim znajduje się wcięty blok kodu, który wykona się jeśli warunek zostanie spełniony.
 
-*elif* - sprawdzany jest kolejny warunek. Pod nim znajduje się wcięty blok kodu, który wykona się jeśli warunek zostanie spełniony. *elifów* w całej instrukcji może być dowolnie dużo.
+*elif* — sprawdzany jest kolejny warunek. Pod nim znajduje się wcięty blok kodu, który wykona się jeśli warunek zostanie spełniony. *elifów* w całej instrukcji może być dowolnie dużo.
 
-*else* - w bloku kodu pod *else* znajdują się instrukcje, które mają zostać wykonane w pozostałym przypadku to znaczy jeśli żaden z powyższych warunków nie został spełniony. Ten element jest opcjonalny, nie musimy definiować bloku *else*
+*else* — w bloku kodu pod *else* znajdują się instrukcje, które mają zostać wykonane w pozostałym przypadku to znaczy jeśli żaden z powyższych warunków nie został spełniony. Ten element jest opcjonalny, nie musimy definiować bloku *else*
 
 ---
 > Jeżeli w instrukcji `if-elif-(else)` wejdziemy do któregoś bloku kodu, kolejne warunki nie są już sprawdzane i po wykonaniu całego bloku następuje wyjście z instrukcji warunkowej. 
