--- a/Python podstawowy/5. Pętle.md
+++ b/Python podstawowy/5. Pętle.md
@@ -1,6 +1,6 @@
 ### 5.1 Pętla for
 #### 5.1.1 Funkcja `range`
-Przed rozpoczęciem nauki pisania pętli w Pythonie dobrze jest poznać wbudowaną funkcję `range`.   Zwraca ona zestaw wartości, które nie pojawiają się w pamięci programu jednocześnie (tak jak np. w przypadku list) ale możemy dostać się do nich po kolei. Dzięki temu optymalizujemy zużycie pamięci. Aby stworzyć zakres wartości od 0 do 6 posłużymy się poniższym kodem:
+Przed rozpoczęciem nauki pisania pętli w Pythonie dobrze jest poznać wbudowaną funkcję `range`.   Zwraca ona zestaw wartości, które nie pojawiają się w pamięci programu jednocześnie (tak jak np. w przypadku list), ale możemy dostać się do nich po kolei. Dzięki temu optymalizujemy zużycie pamięci. Aby stworzyć zakres wartości od 0 do 6, posłużymy się poniższym kodem:
 
 ```python
 range(0, 6)
@@ -8,9 +8,9 @@ range(0, 6)
 # range(0, 6)
 ```
 
-Ponieważ wartości z tego zakresu nie trafiają do pamięci jednocześnie to output powyższej linii kodu nie wyświetla ich wszystkich. Wie jednak jaka jest ich sekwencja i w razie potrzeby będziemy mogli się do nich po kolei dostać. 
+Ponieważ wartości z tego zakresu nie trafiają do pamięci jednocześnie, to output powyższej linii kodu nie wyświetla ich wszystkich. Wie jednak jaka jest ich sekwencja i w razie potrzeby będziemy mogli się do nich po kolei dostać. 
 
-Jeżeli do funkcji `range` przekażemy tylko jeden argument - tak jak poniżej - zostanie on potraktowany jako wartość maksymalna przedziału natomiast wartością minimalną będzie 0:
+Jeżeli do funkcji `range` przekażemy tylko jeden argument — tak jak poniżej — zostanie on potraktowany jako wartość maksymalna przedziału natomiast wartością minimalną będzie 0:
 
 ```python
 range(6)
@@ -39,7 +39,7 @@ list(range(4))
 ```
 Jak widać ostatnia wartość zakresu nie wchodzi do niego - przedział jest otwarty. Podobnie jak przy slicingu.
 
-Jeśli chcemy żeby wartości w `range` rosły nie co 1 ale z innym krokiem, należy tę wartość przekazać jako trzeci argument:
+Jeśli chcemy, żeby wartości w `range` rosły nie co 1 ale z innym krokiem, należy tę wartość przekazać jako trzeci argument:
 
 ```python
 list(range(0, 6, 2))
@@ -49,7 +49,7 @@ list(range(0, 6, 2))
 
 
 #### 5.1.2 Idea pętli
-Często zdarza się że pewien fragment kodu chcemy wykonać wielokrotnie. Rozważmy symulację, w której w kolejnych krokach czasowych dzieją się określone akcje - np. postacie się poruszają albo walczą. Gdybyśmy chcieli zaimplementować to bez użycia pętli wyglądałoby to mniej więcej tak:
+Często zdarza się, że pewien fragment kodu chcemy wykonać wielokrotnie. Rozważmy symulację, w której w kolejnych krokach czasowych dzieją się określone akcje — np. postacie się poruszają albo walczą. Gdybyśmy chcieli zaimplementować to bez użycia pętli wyglądałoby to mniej więcej tak:
 
 ```python
 print("Iteracja 1\n")
@@ -74,7 +74,7 @@ print("Postacie walczą\n\n"
 
 Każda iteracja wymagałaby ponownego napisania tego samego kodu. Poza tym jeśli iteracji byłoby kilkadziesiąt, kilkaset czy kilka tysięcy to tego kodu byłoby bardzo dużo. Zresztą wcale nie musimy z góry wiedzieć ile iteracji będzie miała symulacja.
 
-Do tego właśnie służą pętle - aby określony kawałek kodu wykonać wielokrotnie ale napisać go tylko raz. Jest to bardzo często wykorzystywany element sterowania przepływem programu. W Pythonie istnieją dwa rodzaje pętli spośród których częściej spotykaną jest pętla `for`. Używamy jej kiedy **wiemy z góry ile razy kod ma się wykonać**. W tej pętli istnieje specjalna zmienna - tzw. **iterator** - która w każdej iteracji przyjmuje określoną wartość. Powyższy kod przepisany z użyciem pętli `for` wyglądałby następująco:
+Do tego właśnie służą pętle — aby określony kawałek kodu wykonać wielokrotnie ale napisać go tylko raz. Jest to bardzo często wykorzystywany element sterowania przepływem programu. W Pythonie istnieją dwa rodzaje pętli, spośród których częściej spotykaną jest pętla `for`. Używamy jej kiedy **wiemy z góry ile razy kod ma się wykonać**. W tej pętli istnieje specjalna zmienna — tzw. **iterator** — która w każdej iteracji przyjmuje określoną wartość. Powyższy kod przepisany z użyciem pętli `for` wyglądałby następująco:
 
 ```python
 for i in range(3):
@@ -125,7 +125,7 @@ for n in numbers:
 # Liczba 4 jest parzysta
 ```
 
-Obiekt po którym możemy iterować - czyli np. lista, tupla lub inne podobne typy obiektów - nazywamy iterablą (ang. *iterable*).
+Obiekt po którym możemy iterować — czyli np. lista, tupla lub inne podobne typy obiektów — nazywamy iterablą (ang. *iterable*).
 
 #### 5.1.4 Iterowanie po słowniku
 Możemy również iterować po słowniku. Wówczas iterator przyjmuje takie wartości jak klucze tego słownika:
@@ -162,7 +162,7 @@ for i in range(6):
 W powyższym przykładzie iterator przejdzie po wszystkich wartościach z range'a, ale nic poza tym się nie wydarzy.
 
 ---
-**Pętla `for` - podsumowanie:**
+**Pętla `for` — podsumowanie:**
 - Funkcja `range` zwraca zakres wartości od-do rosnących o określoną wartość (krok)
 - Wartości zwrócone przez `range` nie trafiają do pamięci na raz lecz jedna po drugiej, dopiero kiedy to sprowokujemy
 - Aby wykonać dany blok kodu określoną liczbę razy należy użyć pętli `for`
@@ -188,7 +188,7 @@ while i > 0:
 # 1
 ```
 
-Kolejny przykład dotyczy sytuacji, w której wychodzimy od punktu początkowego symulacji, w którym jest 10 ludzi oraz 10 zombie. Następnie w każdej iteracji jeden człowiek zostaje zainfekowany i zamienia się w zombie a więc liczba ludzi stopniowo maleje. Kiedy dojdzie ona do 0 symulacja się zatrzymuje.
+Kolejny przykład dotyczy sytuacji, w której wychodzimy od punktu początkowego symulacji, w którym jest 10 ludzi oraz 10 zombie. Następnie w każdej iteracji jeden człowiek zostaje zainfekowany i zamienia się w zombie, a więc liczba ludzi stopniowo maleje. Kiedy dojdzie ona do 0, symulacja się zatrzymuje.
 
 ```python
 number_of_humans = 10
@@ -216,7 +216,7 @@ while number_of_humans > 0 and number_of_zombies > 0:
 ```
 
 ---
-**Pętla `while` - podsumowanie:**
+**Pętla `while` – podsumowanie:**
 - Pętla `while` wykonuje się tak długo jak spełniony jest warunek w niej podany
 - Jeżeli warunek będzie zawsze prawdziwy pętla będzie wykonywać się w nieskończoność
 ---
@@ -246,7 +246,7 @@ while True:
 ```
 
 #### 5.3.2 `continue`
-Może się zdarzyć, że dochodząc do pewnego miejsca w pętli chcemy w określonych warunkach od razu przejść do kolejnej iteracji. Aby to osiągnąć używamy instrukcji `continue`. Na przykład w poniższym kodzie printujemy wartości kolejnych elementów z listy, ale tylko jeśli są nieparzyste. W przeciwnym wypadku przechodzimy do kolejnej kolejnej iteracji.
+Może się zdarzyć, że dochodząc do pewnego miejsca w pętli chcemy w określonych warunkach od razu przejść do kolejnej iteracji. Aby to osiągnąć, używamy instrukcji `continue`. Na przykład w poniższym kodzie printujemy wartości kolejnych elementów z listy, ale tylko jeśli są nieparzyste. W przeciwnym wypadku przechodzimy do kolejnej iteracji.
 
 ```python
 for i in [1, 2, 3, 4, 5, 6, 7, 8]:
@@ -261,7 +261,7 @@ for i in [1, 2, 3, 4, 5, 6, 7, 8]:
 # 7
 ```
 
-W kolejnym przykładzie definiujemy siłę człowieka a następnie listę wartości siły kilku zombie. Następnie iterując po wszystkich zombie człowiek ocenia czy ma szansę z nimi wygrać - jeśli nie to przechodzimy do kolejnej iteracji (człowiek unika starcia) a jeśli tak to dochodzi do walki:
+W kolejnym przykładzie definiujemy siłę człowieka a następnie listę wartości siły kilku zombie. Następnie iterując po wszystkich zombie człowiek ocenia czy ma szansę z nimi wygrać — jeśli nie to przechodzimy do kolejnej iteracji (człowiek unika starcia) a jeśli tak to dochodzi do walki:
 ```python
 human_power = 10
 zombies_power = [8, 6, 12, 9, 14, 4]
@@ -292,7 +292,7 @@ for zombie_power in zombies_power:
 ```
 
 ---
-**Instrukcje `break` oraz `continue` - podsumowanie:**
+**Instrukcje `break` oraz `continue` — podsumowanie:**
 - Aby wyjść z pętli w dowolnym jej miejscu używamy instrukcji `break`
 - Aby przejść do kolejnej iteracji używamy instrukcji `continue`
 ---
@@ -327,7 +327,7 @@ W ten sposób możemy połączyć elementy obu iterabli na zasadzie "każdy z ka
 &nbsp;
 ### 5.5 zip i enumerate w pętli for
 #### 5.5.1 `zip`
-Kiedy chcemy przeiterować po kilku iterablach *jednocześnie* możemy połączyć je za pomocą funkcji `zip`. Tak napisana pętla `for` będzie miała kilka iteratorów - tyle ile iterabli zzipujemy:
+Kiedy chcemy przeiterować po kilku iterablach *jednocześnie* możemy połączyć je za pomocą funkcji `zip`. Tak napisana pętla `for` będzie miała kilka iteratorów — tyle ile iterabli zzipujemy:
 ```python
 list_x = [1, 2, 3]
 list_y = [10, 20, 30]
@@ -362,7 +362,7 @@ for human, zombie in zip(humans_power, zombies_power):
 ```
 
 #### 5.5.2 `enumerate`
-Jeśli chcemy przeiterować po iterabli otrzymując w pętli nie tylko jej kolejne wartości ale również licznik iteracji możemy użyć funkcji `enumerate`, która ponumeruje iteracje pętli:
+Jeśli chcemy przeiterować po iterabli otrzymując w pętli nie tylko jej kolejne wartości, ale również licznik iteracji możemy użyć funkcji `enumerate`, która ponumeruje iteracje pętli:
 
 ```python
 for h, power in enumerate(humans_power):
@@ -375,7 +375,7 @@ for h, power in enumerate(humans_power):
 ```
 
 ---
-**`zip` i `enumerate` w pętli `for` - podsumowanie:**
+**`zip` i `enumerate` w pętli `for` — podsumowanie:**
 - Aby przeiterować po kilku iterablach jednocześnie używamy do funkcji `zip`
 - Aby w pętli `for` móc korzystać z licznika iteracji należy przekazać iterablę do funkcji `enumerate`
 ---
@@ -383,7 +383,7 @@ for h, power in enumerate(humans_power):
 ---
 &nbsp;
 ### 5.6 list comprehension
-Jednym z charakterystycznych dla Pythona elementów języka jest tzw. wyrażenie listotwórcze czyli *list comprehension*. Aby utworzyć listę korzystając w tym celu z pętli `for` i zapisując wszystko w jednej linijce możemy użyć nastepującej notacji. To co znajduje się na lewo od *for* to przepis na pojedynczy element listy.
+Jednym z charakterystycznych dla Pythona elementów języka jest tzw. wyrażenie listotwórcze, czyli *list comprehension*. Aby utworzyć listę, korzystając w tym celu z pętli `for` i zapisując wszystko w jednej linijce możemy użyć nastepującej notacji. To, co znajduje się na lewo od *for* to przepis na pojedynczy element listy.
 
 ```python
 tuple_of_numbers = (1, 2, 3, 4, 5, 6, 7)
@@ -422,7 +422,7 @@ print(sum_of_experience)
 ```
 
 ---
-***list comprehension* - podsumowanie:**
+***list comprehension* — podsumowanie:**
 - Aby w jednej linijce utworzyć listę posługując się do tego pętlą możemy użyć *list comprehension*
 - Elementem *list comprehension* może być instrukcja warunkowa
 - Kiedy tylko jest taka możliwość powinniśmy uzywać tej notacji. Sprawia ona że kod jest krótszy i bardziej elegancki
