--- a/Python podstawowy/6. Funkcje.md
+++ b/Python podstawowy/6. Funkcje.md
@@ -1,7 +1,7 @@
 ### 6.1 Procedura
-Często zdarza się, że pewien fragment kodu wykonujemy wielokrotnie w trakcie działania programu. Może on służyć do wykonania określonej operacji - na przykład obliczenia odległości między dwoma (dowolnymi) punktami albo zapisu jakiejś treści do pliku tekstowego. Zamiast wielokrotnie się powtarzać, możemy takie zadanie okodować jeden raz, umieścić je w tzw. funkcji i odwoływać się do niej za każdym razem, kiedy chcemy wykonać to zadanie. Jest to bardzo powszechne w programowaniu.
+Często zdarza się, że pewien fragment kodu wykonujemy wielokrotnie w trakcie działania programu. Może on służyć do wykonania określonej operacji — na przykład obliczenia odległości między dwoma (dowolnymi) punktami albo zapisu jakiejś treści do pliku tekstowego. Zamiast wielokrotnie się powtarzać, możemy takie zadanie okodować jeden raz, umieścić je w tzw. funkcji i odwoływać się do niej za każdym razem, kiedy chcemy wykonać to zadanie. Jest to bardzo powszechne w programowaniu.
 
-Jednym z rodzajów funkcji jest procedura. To taka funkcja, która *niczego nie zwraca* a jedynie *wykonuje zestaw operacji*. O funkcjach zwracających wartość będzie więcej [[6. Funkcje#6.3 Słowo kluczowe return|poniżej]].
+Jednym z rodzajów funkcji jest procedura. To taka funkcja, która *niczego nie zwraca*, a jedynie *wykonuje zestaw operacji*. O funkcjach zwracających wartość będzie więcej [[6. Funkcje#6.3 Słowo kluczowe return|poniżej]].
 
 Jednym z zadań, które jest powtarzalne w symulacji starcia między ludźmi a zombie może być strzał oddany przez człowieka do zombie. Uproszczony model takiego strzału znajduje się poniżej:
 ```python
@@ -9,9 +9,9 @@ def shoot_zombie():
     print("AAAAOOOUUAA!!! <gunshot>  ...")
 ```
 
-Definicja funkcji składa się z kilku elementów składowych. Na początku mamy słowo kluczowe `def`, które oznacza że definiujemy funkcję. Następnie znajduje się nazwa funkcji oraz para nawiasów okrągłych a na końcu dwukropek. To co zostanie napisane poniżej we wciętym bloku kodu to ciało funkcji, czyli zestaw instrukcji, które będą wykonane podczas *wywołania funkcji*. Aby wywołać funkcję w dowolnym miejscu w kodzie należy napisać jej nazwę wraz z parą nawiasów okrągłych.
+Definicja funkcji składa się z kilku elementów składowych. Na początku mamy słowo kluczowe `def`, które oznacza że definiujemy funkcję. Następnie znajduje się nazwa funkcji oraz para nawiasów okrągłych a na końcu dwukropek. To, co zostanie napisane poniżej we wciętym bloku kodu to ciało funkcji, czyli zestaw instrukcji, które będą wykonane podczas *wywołania funkcji*. Aby wywołać funkcję w dowolnym miejscu w kodzie należy napisać jej nazwę wraz z parą nawiasów okrągłych.
 
-Poniżej przykłady kilku podobnych funkcji wraz z wywołaniem  - tym razem strzelamy kolejno do kilku zombie:
+Poniżej przykłady kilku podobnych funkcji wraz z wywołaniem  — tym razem strzelamy kolejno do kilku zombie:
 ```python
 def shoot_two_zombies():
     for z in range(2):
@@ -55,7 +55,7 @@ shoot_five_zombies()
 ```
 
 ---
-**Procedura - podsumowanie:**
+**Procedura — podsumowanie:**
 - Aby nie kopiować tego samego kodu za każdym razem kiedy chcemy z niego skorzystać może zamknąć go w funkcji i wywoływać ją w różnych miejscach
 - Funkcja, która nie zwraca żadnej wartości to procedura
 ---
@@ -63,7 +63,7 @@ shoot_five_zombies()
 ---
 &nbsp;
 ### 6.2 Parametry funkcji
-W powyższych przykładach zostało napisanych kilka funkcji, które są do siebie bardzo podobne - różnią się tylko jednym szczegółem (liczbą strzałów) ale poza tym ich działanie jest identyczne. Zamiast tworzyć wszystkie te funkcje osobno wystarczy zdefiniować jedną a następnie dodać jeden lub więcej *parametrów*, które pozwolą doprecyzować szczegóły działania funkcji. Parametry podajemy wewnątrz nawiasów w definicji funkcji. Jeśli jest ich więcej niż jeden należy oddzielić je przecinkiem.
+W powyższych przykładach zostało napisanych kilka funkcji, które są do siebie bardzo podobne — różnią się tylko jednym szczegółem (liczbą strzałów), ale poza tym ich działanie jest identyczne. Zamiast tworzyć wszystkie te funkcje osobno, wystarczy zdefiniować jedną, a następnie dodać jeden lub więcej *parametrów*, które pozwolą doprecyzować szczegóły działania funkcji. Parametry podajemy wewnątrz nawiasów w definicji funkcji. Jeśli jest ich więcej niż jeden, należy oddzielić je przecinkiem.
 ```python
 def shoot_zombie():
     print("AAAAOOOUUAA!!! <gunshot>  ...")
@@ -88,7 +88,7 @@ Teraz wywołując funkcję `shoot_n_zombies` wystarczyć przekazać do niej *arg
 > Parametry to część definicji funkcji, znajdują się wewnątrz nawiasów okrągłych. Argumenty to wartości, które przekazujemy do funkcji w trakcie jej wywołania
 ---
 
-Opcjonalnie w trakcie przekazywania argumentu można użyć jego nazwy. Jest to przydatne zwłaszcza kiedy wywołujemy funkcję mającą wiele parametrów. Wówczas możemy przekazywać je w dowolnej kolejności. Jeśli natomiast nie będziemy używać ich nazw musimy zachować ich kolejność.
+Opcjonalnie w trakcie przekazywania argumentu można użyć jego nazwy. Jest to przydatne zwłaszcza kiedy wywołujemy funkcję mającą wiele parametrów. Wówczas możemy przekazywać je w dowolnej kolejności. Jeśli natomiast nie będziemy używać ich nazw, musimy zachować ich kolejność.
 
 ```python
 shoot_n_zombies(n=2)
@@ -98,7 +98,7 @@ shoot_n_zombies(n=2)
 ```
 
 ---
-Rozróżniamy dwa rodzaje argumentów ze względu na sposób przekazywania - pozycyjne (*positional arguments*) oraz nazwane (*keyword arguments*). Argumenty pozycyjne to te, które przekazujemy zachowując ich kolejność a nazwane to takie, przy których używamy nazwy parametru podczas przekazywania. Wówczas kolejność jest dowolna. Oba sposoby przekazywania argumentów są dozwolone.
+Rozróżniamy dwa rodzaje argumentów ze względu na sposób przekazywania — pozycyjne (*positional arguments*) oraz nazwane (*keyword arguments*). Argumenty pozycyjne to te, które przekazujemy zachowując ich kolejność, a nazwane to takie, przy których używamy nazwy parametru podczas przekazywania. Wówczas kolejność jest dowolna. Oba sposoby przekazywania argumentów są dozwolone.
 
 ```python  
 def calculate_something(a, b, c):  
@@ -114,7 +114,7 @@ calculate_something(a=5, c=2, b=4)
 ```
 
 ---
-**Parametry funkcji - podsumowanie:**
+**Parametry funkcji — podsumowanie:**
 - Funkcja może (ale nie musi) posiadać jeden lub więcej parametrów
 - Parametry zachowują się jak zmienne, które istnieją tylko wewnątrz funkcji
 - Podczas wywoływania funkcji posiadającej parametry musimy przekazać do niej argumenty, czyli wartości przypisane do poszczególnych parametrów
@@ -137,7 +137,7 @@ print(x)
 # True
 ```
 
-Słowo kluczowe `return` poprzedza wartości zwracane przez funkcję. Zazwyczaj znajduje się ono na samym końcu funkcji. Nie jest to wymagane, ale kiedy dotrzemy w kodzie do tego miejsca następuje wyjście z funkcji.
+Słowo kluczowe `return` poprzedza wartości zwracane przez funkcję. Zazwyczaj znajduje się ono na samym końcu funkcji. Nie jest to wymagane, ale kiedy dotrzemy w kodzie do tego miejsca, następuje wyjście z funkcji.
 
 Poniżej kolejny przykład:
 ```python
@@ -154,7 +154,7 @@ print(square)
 ```
 
 
-Aby zwrócić kilka wartości należy podać je oddzielone przecinkiem po  `return`. Funkcja zwróci wówczas tuplę tych wartości.
+Aby zwrócić kilka wartości, należy wypisać je oddzielone przecinkiem po  `return`. Funkcja zwróci wówczas tuplę tych wartości.
 ```python
 def solve_quadratic_equation(a, b, c):
     delta = b**2 - 4*a*c
@@ -198,7 +198,7 @@ print(x2)
 ```
 
 ---
-**Słowo kluczowe return - podsumowanie:**
+**Słowo kluczowe return — podsumowanie:**
 - Aby funkcja zwróciła jedną lub więcej wartości używamy słowa kluczowego `return`. Zwracane wartości będą mogły być użyte również poza funkcją
 - Użycie `return` kończy działanie funkcji. Najczęściej dzieje się to na samym końcu ciała funkcji
 - Aby zwrócić kilka wartości należy podać je po przecinku
@@ -226,10 +226,10 @@ calculate_distance_to_point((2, 2), (1, 1))
 # 1.4142135623730951
 ```
 
-Powyższa funkcja oblicza i zwraca odległość między dwoma punktami (tuplami) o współrzędnych x,y. Jeśli nie przekażemy do niej drugiego punktu (*reference*) to zostanie użyty tam punkt (0, 0). Jeśli przekażemy inną wartość - to ona będzie wykorzystana.
+Powyższa funkcja oblicza i zwraca odległość między dwoma punktami (tuplami) o współrzędnych x, y. Jeśli nie przekażemy do niej drugiego punktu (*reference*) to zostanie użyty tam punkt (0, 0). Jeśli przekażemy inną wartość — to ona będzie wykorzystana.
 
 ---
-**Parametry z wartością domyślną - podsumowanie:**
+**Parametry z wartością domyślną — podsumowanie:**
 - Parametr funkcji może mieć wartość domyślną - definiujemy ją w deklaracji funkcji
 - Takie parametry muszą być zadeklarowane *po* tych bez wartości domyślnej
 - Jeśli przekażemy jako argument inną wartość, zostanie ona użyta
@@ -279,7 +279,7 @@ list(filter(is_even, list_of_numbers))
 Obiekt typu `filter` jest iterablą a więc możemy po nim iterować.
 
 ---
-**Wbudowane generatory cz. 2 - podsumowanie:**
+**Wbudowane generatory cz. 2 — podsumowanie:**
 - Aby zmapować sekwencję używając dowolnej funkcji używamy generatora `map`
 - Aby przefiltrować sekwencję uzywając funkcji, która zwraca wartość logiczną używamy generatora `filter`
 - Obiekty typów `map` i `filter` są iterablami
@@ -313,7 +313,7 @@ list(filter(lambda x: x % 2 == 0, list_of_numbers))
 ```
 
 ---
-**Lambda - podsumowanie:**
+**Lambda — podsumowanie:**
 - Kiedy chcemy przekazać funkcję jako argument dla innej funkcji możemy użyć lambdy zamiast nazywać i definiować tę funkcję jako obiekt
 - Lambda posiada jeden lub więcej parametrów (po przecinku). To co znajduje się po dwukropku jest zwracane 
 ---
@@ -321,7 +321,7 @@ list(filter(lambda x: x % 2 == 0, list_of_numbers))
 ---
 &nbsp;
 ### 6.7 arguments unpacking
-Kiedy funkcja ma kilka parametrów a wartości które chcemy do niej przekazać znajdują się w jakiejś kolekcji (np. liście lub tupli) nie musimy wyciągać ich a następnie przekazywać jako osobne argumenty. Taki zapis byłby długi i mało elegancki, tak jak w poniższym przykładzie, w którym modelujemy listę ludzi jako tuple zawierające informacje o poszczególnych ich cechach. Następnie używamy tych tupli do obliczenia ogólnego score'u:
+Kiedy funkcja ma kilka parametrów a wartości, które chcemy do niej przekazać znajdują się w jakiejś kolekcji (np. liście lub tupli) nie musimy wyciągać ich, a następnie przekazywać jako osobne argumenty. Taki zapis byłby długi i mało elegancki, tak jak w poniższym przykładzie, w którym modelujemy listę ludzi jako tuple zawierające informacje o poszczególnych ich cechach. Następnie używamy tych tupli do obliczenia ogólnego score'u:
 
 ```python
 def calculate_human_score(velocity, experience, power):
@@ -360,7 +360,7 @@ calculate_human_score(**{"velocity": 2, "experience": 4, "power": 3})
 ```
 
 ---
-***arguments unpacking* - podsumowanie:**
+***arguments unpacking* — podsumowanie:**
 - Aby rozbić listę lub tuplę na poszczególne elementy, które zostaną przekazane do funkcji jako argumenty pozycyjne należy użyć operatora *
 - Aby rozbić słownik na poszczególne pary klucz wartość, które zostaną przekazane do funkcji jako argumenty nazwane należy użyć operatora ** 
 
@@ -369,7 +369,7 @@ calculate_human_score(**{"velocity": 2, "experience": 4, "power": 3})
 ---
 &nbsp;
 ### 6.8 args, kwargs
-Może się zdarzyć że chcemy przekazać do funkcji pewną liczbę argumentów (pozycyjnych lub nazwanych) ale nie określamy ile dokładnie ich będzie. W takim wypadku jest możliwe przekazać ich dowolnie dużo i trafią one do funkcji jako tupla (w przypadku argumentów pozycyjnych) lub jako słownik (w przypadku argumentów nazwanych). Definicja takiej funkcji wygląda następująco dla argumentów pozycyjnych:
+Może się zdarzyć, że chcemy przekazać do funkcji pewną liczbę argumentów (pozycyjnych lub nazwanych), ale nie określamy ile dokładnie ich będzie. W takim wypadku jest możliwe przekazać ich dowolnie dużo i trafią one do funkcji jako tupla (w przypadku argumentów pozycyjnych) lub jako słownik (w przypadku argumentów nazwanych). Definicja takiej funkcji wygląda następująco dla argumentów pozycyjnych:
 
 ```python
 def calculate_average(*args):
@@ -385,9 +385,9 @@ def create_zombie_dict(**kwargs):
      "velocity": kwargs["velocity"], "n_infected": 0}
 ```
 
-Nazwy `args` i `kwargs` wynikają z konwencji. Składnia języka nie wymusza dokładnie takich nazw, ale warto jest się ich trzymać. To co jest wymagane przez składnię to operatory * oraz ** w definicji funkcji.
+Nazwy `args` i `kwargs` wynikają z konwencji. Składnia języka nie wymusza dokładnie takich nazw, ale warto jest się ich trzymać. To, co jest wymagane przez składnię to operatory * oraz ** w definicji funkcji.
 
-Wywołując takie funkcje możemy przekazać dowolnie dużo argumentów:
+Wywołując takie funkcje, możemy przekazać dowolnie dużo argumentów:
 
 ```python
 zombie_1_velocity = 2
@@ -412,7 +412,7 @@ print(zombie_dict)
 ```
 
 ---
-**`args`, `kwargs` - podsumowanie:**
+**`args`, `kwargs` — podsumowanie:**
 - Aby móc przekazać do funkcji dowolnie dużo argumentów pozycyjnych w definicji tej funkcji należy umieścić `*args*`. Wówczas przekazane argumenty trafią do niej w postaci tupli
 - Aby móc przekazać do funkcji dowolnie dużo argumetnów nazwanych w definicji tej funkcji należy umieścić `**kwargs`. Wówczas przekazane argumenty trafią do niej w postaci słownika
 ---
