--- a/Python podstawowy/7. Jakość kodu i obsługa błędów.md
+++ b/Python podstawowy/7. Jakość kodu i obsługa błędów.md
@@ -374,9 +374,9 @@ ValueError: invalid literal for int() with base 10: 'a'
 ```
 
 #### 7.6.2 `try-except`
-Czasami chcemy wykonać jakiś kawałek kodu, ale spodziewamy się że może pojawić się w nim określony błąd. Możemy zapisać taki kod w bloku `try` i "przechwycić" wyjątek za pomocą `except`. Następnie znajduje się blok kodu, który zostanie wykonany jeśli wystąpi dany błąd.
+Czasami chcemy wykonać jakiś kawałek kodu, ale spodziewamy się, że może pojawić się w nim określony błąd. Możemy zapisać taki kod w bloku `try` i "przechwycić" wyjątek za pomocą `except`. Następnie znajduje się blok kodu, który zostanie wykonany jeśli wystąpi dany błąd.
 
-W poniższym przykładzie dzielimy przez siebie liczby `a` i `b`, ale jeśli okaże się że `b` jest równe 0 zwracamy `None`:
+W poniższym przykładzie dzielimy przez siebie liczby `a` i `b`, ale jeśli okaże się, że `b` jest równe 0, zwracamy `None`:
 
 ```python
 def divide(a, b):
@@ -386,7 +386,7 @@ def divide(a, b):
         return None
 ```
 
-Możemy również przygotować blok `except` na dowolny błąd przechwytując każdy wyjątek (`Exception`) - zwykle aliasowany jako `e`:
+Możemy również przygotować blok `except` na dowolny błąd przechwytując każdy wyjątek (`Exception`) — zwykle aliasowany jako `e`:
 
 ```python
 def divide(a, b):
@@ -398,7 +398,7 @@ def divide(a, b):
 ```
 
 #### 7.6.3 Generowanie wyjątków
-Może się zdarzyć, że chcemy jakiś wyjątek wygenerować samodzielnie. Używamy do tego słowa kluczowego `raise`, nazwy błędu oraz komunikatu jaki ma zostać wyświetlony:
+Może się zdarzyć, że chcemy jakiś wyjątek wygenerować samodzielnie. Używamy do tego słowa kluczowego `raise`, nazwy błędu oraz komunikatu, jaki ma zostać wyświetlony:
 
 ```python
 raise TypeError("Błędny typ")
@@ -421,7 +421,7 @@ for number in numbers:
 ```
 
 #### 7.6.4 `assert`
-Jeżeli w dowolnym miejscu kodu chcemy upewnić się że pewien warunek logiczny jest spełniony - a jeśli nie jest wyrzucić błąd - możemy użyć słowa kluczowego `assert`.
+Jeżeli w dowolnym miejscu kodu chcemy upewnić się że pewien warunek logiczny jest spełniony — a jeśli nie jest wyrzucić błąd — możemy użyć słowa kluczowego `assert`.
 
 ```python
 x = 2
@@ -457,7 +457,7 @@ def check_if_even(list_):
 check_if_even(even_numbers)
 ```
 
-**Wyjątki - podsumowanie:**
+**Wyjątki — podsumowanie:**
 - Różne rodzaje błędów wykonywania programu zwracają różne wyjątki. Zwrócenie wyjątku przerywa działanie programu
 - Aby pojawienie się błędu nie przerwało pracy programu używamy konstrukcji `try-except`, która pozwala przechwycić dowolny wyjątek
 - Możemy podnieść wyjątek za pomocą słowa kluczowego `raise`
