--- a/Python podstawowy/8. Moduły.md
+++ b/Python podstawowy/8. Moduły.md
@@ -6,7 +6,7 @@ Oprócz tej ograniczonej liczby bibliotek, które są w pakiecie z interpreterem
 Żeby użyć danego modułu należy go najpierw zaimportować w kodzie programu za pomocą `import <nazwa biblioteki>`
 
 ---
-**Ogólne informacje - podsumowanie:**
+**Ogólne informacje — podsumowanie:**
 - Funkcje i klasy służące do rozwiązywania konkretnych problemów mogą być zamknięte w moduły i udostępnione dla innych programistów
 - Niektóre moduły są wbudowane w interpreter (biblioteka standardowa Pythona) a inne muszą być instalowane. Indeks bibliotek możliwych do zainstalowania znajduje się na `https://pypi.org/`
 - Aby używać funkcji należących do danej biblioteki musimy ją najpierw zaimportować
