--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -10,13 +10,13 @@ Przedstawiciela klasy nazywamy jej instancją albo obiektem. Każdy obiekt może
 #### 9.1.1 Przykłady klas wbudowanych
 
 **String**
-Klasa - *str*
-Obiekt - dowolny string
+Klasa — *str*
+Obiekt — dowolny string
 Przykładowe metody: `.lower()`, `.upper()`, `.capitalize()`
 
 **Lista**
-Klasa - *list*
-Obiekt - dowolna lista
+Klasa — *list*
+Obiekt — dowolna lista
 Przykładowe metody: `.append()`, `.extend()`, `.count()`
 
 ---
@@ -60,7 +60,7 @@ class Human:
         self.n_killed = n_killed
 ```
 
-Zaczynamy od słowa kluczowego `class`, po którym następuje nazwa klasy. Powinna ona być napisana z wielkiej litery - po tym poznajemy, że coś jest klasą. Następnie wcięty blok kodu zaczynamy od metody \_\_init__(), która zostanie wykonana automatycznie po utworzeniu obiektu. Jej lista parametrów zaczyna się od *self*, który jest odniesieniem do obiektu tej klasy. Co ważne, nie jest to żaden konkretny obiekt. *self* odnosi się zawsze do tego obiektu, który aktualnie jest inicjowany w \_\_init__(). Pozostałe parametry działają jak w każdej innej funkcji.
+Zaczynamy od słowa kluczowego `class`, po którym następuje nazwa klasy. Powinna ona być napisana wielką literą — po tym poznajemy, że coś jest klasą. Następnie wcięty blok kodu zaczynamy od metody \_\_init__(), która zostanie wykonana automatycznie po utworzeniu obiektu. Jej lista parametrów zaczyna się od *self*, który jest odniesieniem do obiektu tej klasy. Co ważne, nie jest to żaden konkretny obiekt. *self* odnosi się zawsze do tego obiektu, który aktualnie jest inicjowany w \_\_init__(). Pozostałe parametry działają jak w każdej innej funkcji.
 
 Wewnątrz metody \_\_init__() przypisujemy do poszczególnych atrybutów klasy `Human` wartości pochodzące z przekazanych argumentów. W podobny sposób utworzymy klasę `Zombie`:
 
@@ -120,7 +120,7 @@ print(zombie.n_infected)
 ```
 
 
-**Definicja klasy, konstruktor, atrybuty - podsumowanie:**
+**Definicja klasy, konstruktor, atrybuty — podsumowanie:**
 - Klasa to abstrakcyjny opis zawierający zbiór atrybutów (własności) oraz metod (funkcji) używanych do modelowania obiektów tej klasy
 - W Pythonie istnieją klasy wbudowane (np. *str*, *int*, *float*, ...) ale możemy tworzyć również własne. Wówczas ich nazwa powinna zaczynać się od wielkiej litery
 - Klasy prawie zawsze posiadają metodę inicjalizacyjną, która zawiera zestaw instrukcji jakie zostają wykonane po utworzeniu obiektu. Przede wszystkim są tam przypisywane wartości do atrybutów
@@ -162,7 +162,7 @@ human.shoot_n_zombies(3)
 # AAAAOOOUUAA!!! <gunshot>  ...
 ```
 
-Kiedy w jednej metodzie odwołujemy się do innej, należy poprzedzić ją słowem `self`. W powyższym przykładzie metoda `shoot_zombie()` jest częścią klasy a nie luźną funkcją, dlatego wewnątrz `shoot_n_zombies()` odnosimy się do niej poprzez `self.shoot_zombie()`.
+Kiedy w jednej metodzie odwołujemy się do innej, należy poprzedzić ją słowem `self`. W powyższym przykładzie metoda `shoot_zombie()` jest częścią klasy, a nie luźną funkcją, dlatego wewnątrz `shoot_n_zombies()` odnosimy się do niej poprzez `self.shoot_zombie()`.
 
 ---
 Do klasy `Zombie` dodajmy teraz metodę `move()`, która będzie modyfikować współrzędne (x, y) o określony wektor.
@@ -199,7 +199,7 @@ print(zombie.y)
 # 2
 ```
 
-**Metody - podsumowanie:**
+**Metody — podsumowanie:**
 - Funkcje wchodzące w skład klasy nazywamy metodami. Wykonują one pewne operacje, zwykle odnosząc się do instancji klasy
 - Odwołując się do atrybutów lub innych metod należy używać słowa `self`
 - Aby odwołać się do metody obiektu poza klasą należy użyć zapisu `<object_name>.<method_name>`
@@ -283,7 +283,7 @@ print(human.n_killed)
 # 0
 ```
 
-**`staticmethod`, `classmethod` - podsumowanie:**
+**`staticmethod`, `classmethod` — podsumowanie:**
 - Jeżeli metoda nie odnosi się do *self* powinna być oznaczona jako metoda statyczna. Odwołujemy się do niej tak samo jak do zwykłej metody
 - Jeżeli metoda odnosi się do klasy, np. w celu utworzenia jej instancji, jest to *classmethod*. Jej pierwszym parametrem powinno być `cls`
 
@@ -295,7 +295,7 @@ print(human.n_killed)
 ### 9.5 Dziedziczenie
 Może się zdarzyć, że mamy do napisania kilka klas, które współdzielą część atrybutów albo metod. Wówczas nie ma konieczności pisać każdej klasy oddzielnie - możemy zebrać wszystkie wspólne funkcjonalności w jednej klasie bazowej, której potem uzyjemy jako punkt wyjścia do stworzenia kolejnych klas - pochodnych.
 
-Robimy to w następujacy sposób. Zacznijmy od stworzenia klasy `Vehicle`, która będzie reprezentować dowolny pojazd. Każdy pojazd ma jakiś kolor, wagę oraz przebieg. Ma też możliwość przejechania pewnego dystansu, czyli zwiększenia przebiegu.
+Robimy to w następujący sposób. Zacznijmy od stworzenia klasy `Vehicle`, która będzie reprezentować dowolny pojazd. Każdy pojazd ma jakiś kolor, wagę oraz przebieg. Ma też możliwość przejechania pewnego dystansu, czyli zwiększenia przebiegu.
 
 ```python
 class Vehicle:
@@ -308,7 +308,7 @@ class Vehicle:
         self.mileage += distance
 ```
 
-Teraz żeby zamodelować bardziej konkretny pojazd, np. samochód należy stworzyć klasę dziedziczącą. Wewnątrz metody inicjalizacyjnej klasy pochodnej odwołujemy się do *inita* klasy bazowej:
+Teraz, żeby zamodelować bardziej konkretny pojazd, np. samochód należy stworzyć klasę dziedziczącą. Wewnątrz metody inicjalizacyjnej klasy pochodnej odwołujemy się do *inita* klasy bazowej:
 
 ```python
 class Car(Vehicle):
@@ -344,7 +344,7 @@ print(c.fuel_amount)
 # 70
 ```
 
-**Dziedziczenie - podsumowanie:**
+**Dziedziczenie — podsumowanie:**
 - Jeśli tworzymy kilka klas, które współdzielą część atrybutów albo metod możemy utworzyć klasę bazową oraz jedną lub więcej klasy dziedziczące po niej
 - Klasy dziedziczące przejmują wszystkie atrybuty oraz metody klasy bazowej a także mogą posiadać własne
 ---
